# flutter_Backend_rust

./: Cargo.toml
src/: aws_s3.rs  main.rs  models.rs
