[package]
name = "rust_mongo_api_eco"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
mime = "0.3"
futures = "0.3"
aws-sdk-s3 = "1.50.0"  # Use the latest stable version
aws-config = { version = "1.5.6", features = ["behavior-version-latest"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.0"
dotenv = "0.15"